--- a/BallClub/BallClub/Storyboards/Maps.storyboard
+++ b/BallClub/BallClub/Storyboards/Maps.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z7a-Ud-xbZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z7a-Ud-xbZ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Maps View Controller-->
         <scene sceneID="yJC-Jo-ylU">
             <objects>
-                <viewController id="ary-TE-sJi" sceneMemberID="viewController">
+                <viewController id="ary-TE-sJi" customClass="MapsViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LtT-zf-To2"/>
                         <viewControllerLayoutGuide type="bottom" id="mbi-YD-7jF"/>
@@ -16,9 +18,46 @@
                     <view key="view" contentMode="scaleToFill" id="jG8-x0-oxY">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Na2-5u-IxC">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Na2-5u-IxC" firstAttribute="leading" secondItem="jG8-x0-oxY" secondAttribute="leadingMargin" constant="-20" id="STr-36-O6M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Na2-5u-IxC" secondAttribute="trailing" constant="-20" id="Wg8-BN-mGM"/>
+                            <constraint firstItem="Na2-5u-IxC" firstAttribute="top" secondItem="LtT-zf-To2" secondAttribute="bottom" id="mrM-dL-a2h"/>
+                            <constraint firstItem="mbi-YD-7jF" firstAttribute="top" secondItem="Na2-5u-IxC" secondAttribute="bottom" id="yOA-Xz-pya"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="cRc-G2-edg"/>
+                    <navigationItem key="navigationItem" id="cRc-G2-edg">
+                        <leftBarButtonItems>
+                            <barButtonItem enabled="NO" image="ic_navigation_previous" id="ije-QF-dUk">
+                                <color key="tintColor" red="0.22352941176470589" green="0.22352941176470589" blue="0.22352941176470589" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
+                            <barButtonItem enabled="NO" title="THIS WEEK" id="RMn-5z-Uaa">
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </barButtonItem>
+                            <barButtonItem image="ic_navigation_next" id="jei-vR-bOK">
+                                <color key="tintColor" red="0.2274509804" green="0.2274509804" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
+                        </leftBarButtonItems>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Create" id="ajr-AD-DnO">
+                                <color key="tintColor" red="0.91764705882352937" green="0.39215686274509803" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
+                            <barButtonItem image="ic_navigation_search" id="XRi-G5-dp2">
+                                <color key="tintColor" red="0.22745098039215686" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
+                            <barButtonItem image="ic__navigation_def_location" id="zJ1-gc-kpb">
+                                <color key="tintColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="Na2-5u-IxC" id="ID4-12-w5Q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLG-Za-7lU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -32,7 +71,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hJe-7S-Gc9">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.90196078430000004" green="0.38823529410000002" blue="0.050980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
@@ -47,4 +86,10 @@
             <point key="canvasLocation" x="470" y="350"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic__navigation_def_location" width="30" height="30"/>
+        <image name="ic_navigation_next" width="30" height="30"/>
+        <image name="ic_navigation_previous" width="30" height="30"/>
+        <image name="ic_navigation_search" width="30" height="30"/>
+    </resources>
 </document>
