--- a/BallClub/BallClub/Storyboards/Game.storyboard
+++ b/BallClub/BallClub/Storyboards/Game.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pbT-sM-LxJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pbT-sM-LxJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -666,7 +666,7 @@
             <objects>
                 <tableViewController id="9FS-0q-87m" customClass="InvitedFriendsViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="55" sectionHeaderHeight="18" sectionFooterHeight="2" id="vDm-Ey-WT5">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="900"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="separatorColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1133,19 +1133,33 @@
                                                         <outlet property="delegate" destination="xVY-nh-ebn" id="4VH-tZ-Hrd"/>
                                                     </connections>
                                                 </collectionView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nH-vF-ces">
+                                                    <rect key="frame" x="57" y="7" width="535" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="535" id="eP7-ra-eDf"/>
+                                                        <constraint firstAttribute="height" constant="30" id="zov-P7-aEl"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <action selector="didTapOnInviteFriends:" destination="xVY-nh-ebn" eventType="touchUpInside" id="Fz4-vJ-nUW"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="leading" secondItem="ENu-SI-8p2" secondAttribute="leading" id="8cI-xk-gMc"/>
                                                 <constraint firstItem="ENu-SI-8p2" firstAttribute="leading" secondItem="f46-Hf-hzm" secondAttribute="leadingMargin" constant="8" id="8ln-ef-Rnv"/>
                                                 <constraint firstItem="kan-mx-E9X" firstAttribute="leading" secondItem="sCr-1g-fAh" secondAttribute="trailing" constant="16" id="8rM-GS-GUi"/>
+                                                <constraint firstItem="9nH-vF-ces" firstAttribute="leading" secondItem="sCr-1g-fAh" secondAttribute="trailing" constant="16" id="AQq-rS-eZi"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="centerY" secondItem="kan-mx-E9X" secondAttribute="centerY" id="CW1-S9-4VL"/>
                                                 <constraint firstItem="ENu-SI-8p2" firstAttribute="centerY" secondItem="2wK-7a-Cko" secondAttribute="centerY" id="Evb-lb-qRv"/>
                                                 <constraint firstItem="2wK-7a-Cko" firstAttribute="top" secondItem="aTy-Cb-PaY" secondAttribute="bottom" constant="13" id="H6k-Hf-H2B"/>
                                                 <constraint firstItem="KPq-x1-W2U" firstAttribute="top" secondItem="sCr-1g-fAh" secondAttribute="bottom" constant="10" id="NY8-zI-X9Q"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="leading" secondItem="f46-Hf-hzm" secondAttribute="leadingMargin" constant="8" id="NrJ-br-Zr4"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="2wK-7a-Cko" secondAttribute="trailing" constant="6" id="Q3d-Z1-er5"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="9nH-vF-ces" secondAttribute="trailing" id="WLd-Gs-C6r"/>
+                                                <constraint firstItem="9nH-vF-ces" firstAttribute="centerY" secondItem="sCr-1g-fAh" secondAttribute="centerY" id="XMM-Jz-iA7"/>
                                                 <constraint firstItem="sCr-1g-fAh" firstAttribute="top" secondItem="f46-Hf-hzm" secondAttribute="topMargin" constant="1" id="XNP-hS-bRf"/>
                                                 <constraint firstItem="aTy-Cb-PaY" firstAttribute="centerX" secondItem="2wK-7a-Cko" secondAttribute="centerX" id="YZm-YI-wBk"/>
+                                                <constraint firstItem="aTy-Cb-PaY" firstAttribute="top" secondItem="9nH-vF-ces" secondAttribute="bottom" constant="56" id="bwb-DU-dhw"/>
                                                 <constraint firstItem="aTy-Cb-PaY" firstAttribute="trailing" secondItem="kan-mx-E9X" secondAttribute="trailing" id="e0Z-kk-qL1"/>
                                                 <constraint firstItem="aTy-Cb-PaY" firstAttribute="top" secondItem="kan-mx-E9X" secondAttribute="bottom" constant="56" id="j5u-md-hUt"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="KPq-x1-W2U" secondAttribute="trailing" constant="6" id="q4w-XL-zwu"/>
@@ -1272,6 +1286,34 @@
             </objects>
             <point key="canvasLocation" x="2411" y="349"/>
         </scene>
+        <!--Invite Friends Table View Controller-->
+        <scene sceneID="Uti-Wg-00m">
+            <objects>
+                <tableViewController storyboardIdentifier="InviteFriendsTVC" id="Ma6-rE-6WF" customClass="InviteFriendsTableViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="fUF-sY-C3w" customClass="In">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Wii-wH-Uct">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wii-wH-Uct" id="rjb-ob-c8v">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ma6-rE-6WF" id="GLB-pZ-nsZ"/>
+                            <outlet property="delegate" destination="Ma6-rE-6WF" id="NtY-SQ-5wk"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AoL-PJ-kYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3372" y="324"/>
+        </scene>
         <!--Games-->
         <scene sceneID="JIH-9n-Gft">
             <objects>
@@ -1322,6 +1364,6 @@
         <image name="player_durant" width="200" height="125"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="74J-Dm-tV0"/>
+        <segue reference="w2v-na-vYe"/>
     </inferredMetricsTieBreakers>
 </document>
