--- a/BallClub/BallClub/Storyboards/User.storyboard
+++ b/BallClub/BallClub/Storyboards/User.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1Qb-0J-YXH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NLi-jW-F2q">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,7 +11,62 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--User-->
+        <!--Settings Table View Controller-->
+        <scene sceneID="Zp1-Tb-gft">
+            <objects>
+                <tableViewController id="lLD-n6-1fq" customClass="SettingsTableViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="2Ty-Tw-U3c">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="zwh-hV-mEC">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="G6k-Fg-BeV">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="G6k-Fg-BeV" id="uZq-Pl-vV3">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_signout" translatesAutoresizingMaskIntoConstraints="NO" id="cnn-Ib-yyi">
+                                                    <rect key="frame" x="17" y="10" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="otL-QC-scK"/>
+                                                        <constraint firstAttribute="width" constant="40" id="ymw-3q-lM4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhC-Nc-x8L">
+                                                    <rect key="frame" x="77" y="20" width="255" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jhC-Nc-x8L" firstAttribute="leading" secondItem="cnn-Ib-yyi" secondAttribute="trailing" constant="20" id="Kp7-wz-C8V"/>
+                                                <constraint firstItem="jhC-Nc-x8L" firstAttribute="centerY" secondItem="uZq-Pl-vV3" secondAttribute="centerY" id="ZzT-cL-Bgy"/>
+                                                <constraint firstItem="cnn-Ib-yyi" firstAttribute="centerY" secondItem="uZq-Pl-vV3" secondAttribute="centerY" id="liV-hl-wee"/>
+                                                <constraint firstItem="cnn-Ib-yyi" firstAttribute="leading" secondItem="uZq-Pl-vV3" secondAttribute="leadingMargin" constant="9" id="qDa-ec-7JS"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="jhC-Nc-x8L" secondAttribute="trailing" constant="35" id="xQe-uA-s7D"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="lLD-n6-1fq" id="bBP-SR-Wbs"/>
+                            <outlet property="delegate" destination="lLD-n6-1fq" id="1WC-oA-zE5"/>
+                        </connections>
+                    </tableView>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eLj-GP-7ov" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1852" y="-36.431784107946029"/>
+        </scene>
+        <!--User View Controller-->
         <scene sceneID="bzF-x7-QnM">
             <objects>
                 <viewController id="1Qb-0J-YXH" customClass="UserViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
@@ -114,6 +169,9 @@
                                         <state key="normal" title="Settings">
                                             <color key="titleColor" red="0.14117647059999999" green="0.1450980392" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="settingsButtonPressed:" destination="1Qb-0J-YXH" eventType="touchUpInside" id="qMO-5u-p5f"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player_calvin" translatesAutoresizingMaskIntoConstraints="NO" id="Dxd-n6-1uu">
                                         <rect key="frame" x="24" y="56" width="40" height="40"/>
@@ -221,8 +279,8 @@
                             <constraint firstAttribute="trailingMargin" secondItem="bjX-bL-gko" secondAttribute="trailing" id="zgf-w3-mhu"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="User" image="ic_tabbar_user" id="qFO-xe-kE6"/>
                     <navigationItem key="navigationItem" id="AeX-RC-C04"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
                     <connections>
                         <outlet property="friendsTableView" destination="boT-a7-I9B" id="NTa-4B-qDk"/>
@@ -231,6 +289,7 @@
                         <outlet property="searchTextField" destination="YE4-Qp-X6L" id="iQb-r3-N31"/>
                         <outlet property="searchView" destination="7rU-Oc-N74" id="BdW-xf-edk"/>
                         <segue destination="cyQ-xu-w2l" kind="show" identifier="FriendsProfileViewControllerSegue" id="abP-np-lwi"/>
+                        <segue destination="lLD-n6-1fq" kind="show" identifier="pushSettingsVC" id="FvQ-eE-NcD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7uS-SA-01D" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -243,7 +302,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="913" y="350"/>
+            <point key="canvasLocation" x="852" y="317.99100449775113"/>
         </scene>
         <!--Friends-->
         <scene sceneID="rpa-5R-pWX">
@@ -251,7 +310,7 @@
                 <viewControllerPlaceholder storyboardName="Friends" id="cyQ-xu-w2l" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mu8-h3-Ag9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913" y="790"/>
+            <point key="canvasLocation" x="-88" y="800"/>
         </scene>
         <!--User Search Result Table View Controller-->
         <scene sceneID="axl-fK-LnI">
@@ -760,6 +819,7 @@
                             </tableViewSection>
                         </sections>
                     </tableView>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="850"/>
                     <connections>
@@ -787,13 +847,34 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1937.5999999999999" y="348.12593703148428"/>
+            <point key="canvasLocation" x="1851.2" y="844.67766116941539"/>
+        </scene>
+        <!--User-->
+        <scene sceneID="4y7-qm-P41">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NLi-jW-F2q" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="User" image="ic_tabbar_user" id="qFO-xe-kE6"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="tgr-fH-AD6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.13333333333333333" green="0.13725490196078433" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1Qb-0J-YXH" kind="relationship" relationship="rootViewController" id="V62-PA-a5l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l83-SH-9W9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-87.200000000000003" y="317.99100449775113"/>
         </scene>
     </scenes>
     <resources>
         <image name="ic_date" width="100" height="100"/>
         <image name="ic_search" width="100" height="100"/>
         <image name="ic_settings" width="512" height="512"/>
+        <image name="ic_signout" width="75" height="75"/>
         <image name="ic_tabbar_map" width="30" height="30"/>
         <image name="ic_tabbar_user" width="30" height="30"/>
         <image name="player_calvin" width="229" height="166"/>
